[package]
name = "nexusvault"
version = "0.2.2"
edition = "2021"
description = "Zero-dependency secrets management for Rust applications"
license = "Apache-2.0"
readme = "README.md"

[[bin]]
name = "nexusvault"
path = "src/main.rs"

[dependencies]
aegis-vault = { path = "../Aegis-DB/crates/aegis-vault" }
aegis-common = { path = "../Aegis-DB/crates/aegis-common" }
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
