[package]
name = "nexusvault"
version = "0.2.3"
edition = "2021"
description = "Zero-dependency secrets management for Rust applications"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/AutomataNexus/NexusVault"
homepage = "https://github.com/AutomataNexus/NexusVault"
keywords = ["secrets", "vault", "encryption", "security"]
categories = ["cryptography"]

[[bin]]
name = "nexusvault"
path = "src/main.rs"

[dependencies]
aegis-vault = { package = "aegis-db-vault", version = "0.2.3", path = "../Aegis-DB/crates/aegis-vault" }
aegis-common = { version = "0.2.3", path = "../Aegis-DB/crates/aegis-common" }
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.4", features = ["derive"] }
base64 = "0.22"
parking_lot = "0.12"
libc = "0.2"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
http = "1.0"
axum-server = { version = "0.7", features = ["tls-rustls"] }
rustls = "0.23"
